# voxel-shooter

./: Cargo.toml
assets/shaders/: chunk.wgsl
binaries/client/: Cargo.toml
binaries/client/assets/shaders/: chunk.wgsl  new_chunk.wgsl
binaries/client/src/: main.rs
binaries/client/src/render/: world.rs
binaries/client/src/render/world/: chunk.rs  voxel.rs
binaries/client/src/render/world/chunk/: culler.rs  greedy_mesher.rs
binaries/server/: Cargo.toml
binaries/texture-test/: Cargo.toml
binaries/texture-test/assets/shaders/: chunk.wgsl
binaries/texture-test/src/: main.rs  quad.rs
libraries/logic/: Cargo.toml
libraries/logic/src/: cursor.rs  lib.rs  player.rs
libraries/voxel/: Cargo.toml
libraries/voxel/src/: world.rs
libraries/voxel/src/world/: blocks.rs  chunk.rs  tree.rs
src/: logic.rs  main.rs
src/logic/: player.rs  world.rs
src/render/: world.rs
src/render/world/: chunk_culler.rs  mesh.rs  quad.rs
