[workspace]
members = ["binaries/client", "binaries/server", "libraries/voxel"]
resolver = "2"

[workspace.package]
version = "0.0.1"
description = "Voxel Shooter is a 3D voxel game where you can build, destroy and more importantly, shoot!"
edition = "2021"
documentation = ""
license = "Apache-2.0"
repository = "https://github.com/Hennzau/voxel-shooter"

[workspace.dependencies]
voxel = { path = "libraries/voxel" }

bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.26.0"
bevy_screen_diagnostics = "0.6.0"
perlin2d = "0.2.6"
rand = "0.8.5"
eyre = "0.6.12"
