[package]
name = "client"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
wgpu = "22.1.0"
winit = "0.30.5"
