[package]
name = "texture-test"
version.workspace = true
edition.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
logic = { workspace = true }

bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_screen_diagnostics = { workspace = true }
eyre = { workspace = true }
